stoat/src/snapshots/stoat__test_harness__snapshot_hover_below_when_tall.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 40x20
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m3[0m[38;2;250;250;250m[48;2;40;44;52m                              [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m4[0m[38;2;250;250;250m[48;2;40;44;52m                              [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m6[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m5[0m[38;2;250;250;250m[48;2;40;44;52m                              [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│┌───────┐[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m││hover 0│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m3[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m││hover 1│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m4[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m││hover 2│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m5[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m││hover 3│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m6[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m││hover 4│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│hover 5│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│hover 6│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│hover 7│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m└───────┘[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m lsp-did-open-test main.rs [0m[38;2;99;109;131m[48;2;99;109;131m───[0m[38;2;250;250;250m[48;2;99;109;131m 6:1 [0m
