stoat/src/snapshots/stoat__test_harness__snapshot_hover_over_diff.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 80x14
---
[0m[33m┌ hover ─────┐-- rust[0m                  [0m[90m│[0m
[0m[33m│changed here│[0m                         [0m[90m│[0m[1m[36m│[0m[90m   1 [0m[97ma[0m
[0m[33m└────────────┘[0m                         [0m[90m│[0m[1m[36m│[0m[90m   2 [0m[97mb[0m
[0m[1m[36m│[0m[90m   3 [0m[31mc[0m                                [0m[90m│[0m[1m[36m│[0m[90m   3 [0m[7m[32mX[0m
[0m[1m[36m│[0m[90m   4 [0m[97md[0m                                [0m[90m│[0m[1m[36m│[0m[90m   4 [0m[97md[0m








[0m[1m[30m[44m NOR [0m[1m[97m[100m work [0m[36m[100m review [0m[97m[100m[scratch]                                                    [0m
