stoat/src/snapshots/stoat__test_harness__snapshot_marked_multi_cursor_extend.snap
---
source: stoat/src/test_harness.rs
expression: self.to_marked_text()
---
a<|bc||>d
e<|fg||>h
i<|jk||>l
