stoat/src/snapshots/stoat__test_harness__snapshot_marked_split_on_newline.snap
---
source: stoat/src/test_harness.rs
expression: self.to_marked_text()
---
<|abc||>
<|def||>
<|ghi||>
